# Tesix

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  build.sh  build.zig  build.zig.zon  func.cmake  init.sh  main.cpp  test2.txt
include/: TESIX_App.h  TESIX_ColoredString.h  TESIX_Editor.h  TESIX_File.h  TESIX_FileWindow.h  TESIX_Input.h  TESIX_Layout.h  TESIX_Linter.h  TESIX_Location.h  TESIX_Selection.h  TESIX_SyntaxTree.h  TESIX_UI.h  TESIX_Window.h  TESIX_Zerteiler.h
include/datatypes/: TESIX_BoundsError.h  TESIX_ColoredString.h  TESIX_Error.h  TESIX_KeyPress.h  TESIX_Location.h  TESIX_Selection.h  TESIX_Token.h
lib/include/: bitset.hpp  debug.hpp  direction.hpp  quadtree.hpp  style.hpp
sample_files/: test.txt  test2.txt
src/: TESIX_ColoredString.cpp  TESIX_Editor.cpp  TESIX_File.cpp  TESIX_FileWindow.cpp  TESIX_Input.cpp  TESIX_SyntaxTree.cpp  TESIX_Window.cpp  main.cpp
src/datatypes/: TESIX_ColoredString.cpp  TESIX_Selection.cpp
valgrind-log/: CMakeCache.txt  build.ninja  callgrind.out.34139  callgrind.out.93648  cmake_install.cmake
